Fix container images to 40% width without cropping

--- a/style.css
+++ b/style.css
@@ -62,9 +62,8 @@ li {
 }
 
 .image-container img {
-    width: 60%;
+    width: 40%;
     height: auto;
-    object-fit: cover;
 }
 
 
